<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:background="@color/white_gray"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teal_700"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        tools:ignore="MissingConstraints">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:background="@drawable/circle_outline"
            android:clipToOutline="true"
            android:scaleType="centerCrop"
            android:src="@drawable/examlogo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="30sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/lgEmailAddress"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:drawableStart="@drawable/ic_account"
        android:drawableTint="@color/teal_700"
        android:backgroundTint="@color/teal_700"
        android:textColor="@color/blackColor"
        android:drawablePadding="16dp"
        android:hint="@string/emailHint"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <EditText
        android:id="@+id/lgPassword"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:drawableStart="@drawable/ic_password"
        android:drawableTint="@color/teal_700"
        android:backgroundTint="@color/teal_700"
        android:hint="@string/passwordHint"
        android:drawablePadding="16dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lgEmailAddress" />

<!--    <TextView-->
<!--        android:id="@+id/lgForgotPassword"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="16dp"-->
<!--        android:text="@string/forgot_password"-->
<!--        android:textColor="@color/blackColor"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/lgPassword"-->
<!--        tools:layout_editor_absoluteX="31dp"-->
<!--        tools:ignore="MissingConstraints" />-->

    <Button
        android:id="@+id/lgLoginButton"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:text="@string/loginButton"
        android:background="@drawable/button_shape"
        android:backgroundTint="@color/teal_700"
        android:textSize="18sp"
        android:elevation="5dp"
        android:translationZ="3dp"
        android:stateListAnimator="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lgPassword" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/don_t_have_an_account"
        android:textColor="@color/blackColor"
        app:layout_constraintTop_toBottomOf="@+id/lgLoginButton"
        tools:layout_editor_absoluteX="33dp"
        tools:ignore="MissingConstraints"/>

    <TextView
        android:id="@+id/lgSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:text="@string/signupButton"
        android:textColor="@color/teal_700"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/lgLoginButton"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>