<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@drawable/main_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartTestActivity">


    <TextView
        android:id="@+id/st_categoryName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categories"
        android:layout_marginStart="24dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="24dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/st_testNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_number_1"
        android:textColor="@color/black"
        android:layout_marginStart="24dp"
        android:layout_marginTop="170dp"
        android:layout_marginEnd="24dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="37dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/st_layout" />

    <LinearLayout
        android:id="@+id/st_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="64dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/start_testB">

        <androidx.cardview.widget.CardView
            android:layout_width="120dp"
            android:layout_height="160dp"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="5dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:orientation="vertical"
                android:gravity="center"
                android:paddingTop="16dp">
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginBottom="8dp"
                    android:src="@drawable/question" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Questions"
                    android:gravity="bottom"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/st_totalQ"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="5"
                    android:layout_weight="1"
                    android:gravity="bottom"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:textStyle="bold"
                     />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="120dp"
            android:layout_height="160dp"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="5dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:orientation="vertical"
                android:gravity="center"
                android:paddingTop="16dp">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="24dp"
                    android:layout_marginBottom="8dp"
                    android:src="@drawable/award" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Best Score"
                    android:gravity="bottom"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/st_bestScore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="80"
                    android:layout_weight="1"
                    android:gravity="bottom"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="120dp"
            android:layout_height="160dp"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="5dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:orientation="vertical"
                android:gravity="center"
                android:paddingTop="16dp">
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginBottom="8dp"
                    android:src="@drawable/clock" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Time"
                    android:gravity="bottom"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/st_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="5"
                    android:layout_weight="1"
                    android:gravity="bottom"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>



    </LinearLayout>

    <Button
        android:id="@+id/start_testB"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:text="@string/start"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:translationZ="3dp"
        android:stateListAnimator="@null"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/teal_700"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />


  <ImageView
      android:id="@+id/st_back"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:src="@drawable/ic_back"
      android:layout_marginStart="16dp"
      android:layout_marginTop="16dp"
      android:padding="8dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:tint="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>